prevent iabar buttons from wrapping

--- a/static/css/components/iaBar.less
+++ b/static/css/components/iaBar.less
@@ -59,6 +59,7 @@
       padding: 5px 7px;
       margin-right: 10px;
       margin-left: 10px;
+      white-space: nowrap;
     }
   }
 }
